--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hously - Real Estate Admin Dashboard</title>
   </head>
-  <body>
+  <body class=" scrollbar-thin scrollbar-thumb-green-500 scrollbar-track-slate-500 ">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
